# sqli-dumb-scanner

./: pyproject.toml
sqli_dumb_scanner/: console.py
tests/: test_sqli_dumb_scanner.py
